--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Navbar (placed at the bottom of the header image) -->
   <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
     
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/index.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
+    <a href="https://vectorreaves.github.io/Crypto-Predictions/" class="w3-bar-item w3-button">Bitcoin</a>
     <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
     <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
     <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
@@ -57,7 +57,7 @@
 
 <!-- Navbar (placed at the bottom of the header image) -->
 <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/index.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
+  <a href="https://vectorreaves.github.io/Crypto-Predictions/" class="w3-bar-item w3-button">Bitcoin</a>
   <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
   <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
   <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
