--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <!DOCTYPE html>
       <html>
-      <body background="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\crypto_logos.png">
+      <body background="https://github.com/VectorReaves/Crypto-Predictions/blob/main/Images/background-btc.jpg">
 
 
       </body>
