--- a/ethereum.html
+++ b/ethereum.html
@@ -28,19 +28,6 @@
     <h3 class="w3-hide-medium w3-hide-small">DATA ANALYSIS</h3>
   </div>
   
-  <!-- Navbar (placed at the bottom of the header image) -->
-  <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
-    <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
-    <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
-
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
-  </div>
-</header>
-
 <!-- Navbar on small screens -->
 <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 <div class="w3-bar w3-light-grey">
@@ -52,16 +39,15 @@
 
 <!-- Navbar (placed at the bottom of the header image) -->
 <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
+    <a href="index.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
+    <a href="doge.html" class="w3-bar-item w3-button">Doge</a>
+    <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
+    <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
     <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+    <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
-
 
 <!-- Page content -->
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
