--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <!DOCTYPE html>
       <html>
-      <body background="https://github.com/VectorReaves/Crypto-Predictions/blob/main/Images/background-btc.jpg">
+      <body background="Images/background-btc.jpg">
 
 
       </body>
@@ -37,21 +37,21 @@
     
     <a href="https://vectorreaves.github.io/Crypto-Predictions/" class="w3-bar-item w3-button">Bitcoin</a>
     <a href="doge.html" class="w3-bar-item w3-button">Doge</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
+    <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
+    <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
     <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
 
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+    <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
 
 <!-- Navbar on small screens -->
 <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 <div class="w3-bar w3-light-grey">
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/index.html#portfolio" class="w3-bar-item w3-button">Bitcoin/a>
+  <a href="index.html#portfolio" class="w3-bar-item w3-button">Bitcoin/a>
   <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+  <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 </div>
 </div>
 
@@ -59,11 +59,11 @@
 <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
   <a href="https://vectorreaves.github.io/Crypto-Predictions/" class="w3-bar-item w3-button">Bitcoin</a>
   <a href="https://github.com/VectorReaves/Crypto-Predictions/blob/main/doge.html" class="w3-bar-item w3-button">Doge</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
+  <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
+  <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
   <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
   <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+  <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 </div>
 </header>
 
