--- a/doge.html
+++ b/doge.html
@@ -12,7 +12,7 @@
 
     <!DOCTYPE html>
     <html>
-    <body background="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\crypto_logos.png">
+    <body background="Images\crypto_logos.png">
 
 
     </body>
@@ -37,7 +37,7 @@
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
     <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
 
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+    <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
 
@@ -46,7 +46,7 @@
 <div class="w3-bar w3-light-grey">
   <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin/a>
   <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+  <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 </div>
 </div>
 
@@ -78,11 +78,11 @@
            <th> <h2>Dogecoin Predictions</h2>
             <p>"Dogecoin started as a pardoy currency by IBM software engineer Billy Markus. The crypto picked up in popularity when celebrtities like Elon Musk started to invest in it and considered allowing purchases of Tesla vehicles with the currency. It has seen generally low values but has increased in popularity whenever he tweets about it.</p>
         </th>
-            <th><img src="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\doge.png" alt="btc" class="img-responsive" width="750" height="300"></th>
+            <th><img src="Images\doge.png" alt="btc" class="img-responsive" width="750" height="300"></th>
   
         </tr>
         <tr>
-            <td><img src="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\doge-compare.png" alt="btc" class="img-responsive" width="600" height="300"></td>
+            <td><img src="Images\doge-compare.png" alt="btc" class="img-responsive" width="600" height="300"></td>
       
         </tr>
       
