--- a/atom.html
+++ b/atom.html
@@ -13,7 +13,7 @@
     
     <!DOCTYPE html>
     <html>
-    <body background="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\crypto_logos.png">
+    <body background="Images\crypto_logos.png">
 
 
     </body>
@@ -29,35 +29,35 @@
   
   <!-- Navbar (placed at the bottom of the header image) -->
   <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
+    <a href="index.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
+    <a href="doge.html" class="w3-bar-item w3-button">Doge</a>
+    <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
+    <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
     <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
 
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+    <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
 
 <!-- Navbar on small screens -->
 <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 <div class="w3-bar w3-light-grey">
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin/a>
+  <a href="index.html#portfolio" class="w3-bar-item w3-button">Bitcoin/a>
   <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
-  <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+  <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 </div>
 </div>
 
 <!-- Navbar (placed at the bottom of the header image) -->
 <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/btc.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/doge.html" class="w3-bar-item w3-button">Doge</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/atom.html" class="w3-bar-item w3-button">ATOM</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
+    <a href="index.html#portfolio" class="w3-bar-item w3-button">Bitcoin</a>
+    <a href="doge.html" class="w3-bar-item w3-button">Doge</a>
+    <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
+    <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
     <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
-    <a href="file:///C:/Users/zachg/OneDrive/Desktop/emer-virt-data-pt-09-2021-u-c-main/23-Project-4/contact.html" class="w3-bar-item w3-button">Contact</a>
+    <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
 
@@ -80,7 +80,7 @@
             <th>    
             <h2>ATOM Predictions</h2>
             <p>Originally created as a blockchain crytpo currency by Cosmos, the ATOM coin is often considered by many crypto investors as a stable cryptocurrency with low risk. According to cryptonews.nz, the vlaue is predicted to go up over $30 in 2022 and remain stable.</p></tr></th> 
-            <th><img src="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\cosmos.png" alt="btc" class="img-responsive" width="750" height="300"></th>
+            <th><img src="Images\cosmos.png" alt="btc" class="img-responsive" width="750" height="300"></th>
   
       
         </tr>
