--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <!DOCTYPE html>
       <html>
-      <body background= url("../Images/background-btc.jpg")>
+      <body background="../Images/background-btc.jpg">
 
 
       </body>
