--- a/doge.html
+++ b/doge.html
@@ -12,7 +12,7 @@
 
     <!DOCTYPE html>
     <html>
-    <body background="Images\crypto_logos.png">
+    <body background="Images/crypto_logos.png">
 
 
     </body>
@@ -78,11 +78,11 @@
            <th> <h2>Dogecoin Predictions</h2>
             <p>"Dogecoin started as a pardoy currency by IBM software engineer Billy Markus. The crypto picked up in popularity when celebrtities like Elon Musk started to invest in it and considered allowing purchases of Tesla vehicles with the currency. It has seen generally low values but has increased in popularity whenever he tweets about it.</p>
         </th>
-            <th><img src="Images\doge.png" alt="btc" class="img-responsive" width="750" height="300"></th>
+            <th><img src="Images/doge.png" alt="btc" class="img-responsive" width="750" height="300"></th>
   
         </tr>
         <tr>
-            <td><img src="Images\doge-compare.png" alt="btc" class="img-responsive" width="600" height="300"></td>
+            <td><img src="Images/doge-compare.png" alt="btc" class="img-responsive" width="600" height="300"></td>
       
         </tr>
       
