--- a/atom.html
+++ b/atom.html
@@ -13,7 +13,7 @@
     
     <!DOCTYPE html>
     <html>
-    <body background="Images\crypto_logos.png">
+    <body background="Images/crypto_logos.png">
 
 
     </body>
@@ -80,7 +80,7 @@
             <th>    
             <h2>ATOM Predictions</h2>
             <p>Originally created as a blockchain crytpo currency by Cosmos, the ATOM coin is often considered by many crypto investors as a stable cryptocurrency with low risk. According to cryptonews.nz, the vlaue is predicted to go up over $30 in 2022 and remain stable.</p></tr></th> 
-            <th><img src="Images\cosmos.png" alt="btc" class="img-responsive" width="750" height="300"></th>
+            <th><img src="Images/cosmos.png" alt="btc" class="img-responsive" width="750" height="300"></th>
   
       
         </tr>
