--- a/ethereum.html
+++ b/ethereum.html
@@ -12,7 +12,7 @@
 
     <!DOCTYPE html>
     <html>
-      <body background="/Images/background-btc.jpg">
+      <body background="/Images/background-btc.png">
 
 
     </body>
