--- a/doge.html
+++ b/doge.html
@@ -12,7 +12,7 @@
 
     <!DOCTYPE html>
     <html>
-    <body background="Images/crypto_logos.png">
+      <body background="/Images/background-btc.png">
 
 
     </body>
