--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <!DOCTYPE html>
   <html>
-  <body background="C:\Users\zachg\OneDrive\Desktop\emer-virt-data-pt-09-2021-u-c-main\23-Project-4\Images\crypto_logos.png">
+      <body background="/Images/background-btc.png">
 
 
   </body>
