--- a/ethereum.html
+++ b/ethereum.html
@@ -44,7 +44,7 @@
     <a href="atom.html" class="w3-bar-item w3-button">ATOM</a>
     <a href="ethereum.html" class="w3-bar-item w3-button">Ethereum</a>
     <a href="https://github.com/VectorReaves/Crypto-Predictions" class="w3-bar-item w3-button">Github</a>
-    <a href="https://vectorreaves.com/gallery/" class="w3-bar-item w3-button">Interactive Graphs</a>
+    <a href="chart.html" class="w3-bar-item w3-button">Interactive Graphs</a>
     <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
